<resources>
    <string name="app_name">Yaroslavl Zoo</string>
    <string name="news_text">Welcome to the Yaroslavl Zoo! This is news.</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_about">About us</string>
    <string name="title_settings">Settings</string>
    <string name="mainpage_head">Welcome to the Yaroslavl Zoo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settingspage_head">Welcome to settings</string>
    <string name="title_activity_map">Map</string>
    <string name="mappage_head">Welcome to the map!</string>
    <string name="aboutpage_head">About us</string>
    <string name="workingtime_head">Working time:</string>
    <string name="workingtime_text">Since 10AM to 5 PM without weekend and lunch</string>
    <string name="ouraddress_head">Our address:</string>
    <string name="ouraddress_text">Yaroslavl city, Shevelyuha street, 137</string>
    <string name="ournumber_head">Our number:</string>
    <string name="ournumber_text">8(4852)74-32-21</string>
    <string name="fragment_main_title">News</string>
    <string name="we_in_socials">We are in social networks</string>
    <string name="settings_theme_switch">Night mode</string>
    <string name="connecting_text">Connecting...</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="downloading_error">Error during download</string>
    <string name="zoo_news">News default text</string>
    <string name="image_viewer_title">ImageViewer</string>
    <string name="fullnews_default_string">News</string>
    <string name="pref_header_general">General</string>
</resources>
