<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/workingtime_head"
        style="@style/Aboutpage_headers"
        android:text="@string/workingtime_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/workingtime_text"
        style="@style/Aboutpage_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workingtime_head"
        android:text="@string/workingtime_text" />


    <TextView
        android:id="@+id/ouraddress_head"
        style="@style/Aboutpage_headers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/workingtime_text"
        android:text="@string/ouraddress_head" />


    <TextView
        android:id="@+id/ouraddress_text"
        style="@style/Aboutpage_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ouraddress_head"
        android:text="@string/ouraddress_text" />

    <TextView
        android:id="@+id/ournumber_head"
        style="@style/Aboutpage_headers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ouraddress_text"
        android:text="@string/ournumber_head" />


    <TextView
        android:id="@+id/ournumber_text"
        style="@style/Aboutpage_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ournumber_head"
        android:text="@string/ournumber_text" />

</android.support.constraint.ConstraintLayout>